--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -33,6 +33,15 @@
     path: ~/web
     state: directory
 
+- name: "Installing Rsync"
+  apt: >
+    pkg={{ item }}
+    state=latest
+    update_cache=yes
+    cache_valid_time=3600
+  with_items:
+  - rsync
+
 - name: copy ditribution folder to remote server
   synchronize:
     src: "files/dist/"
