--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -248,7 +248,7 @@ jobs:
       - run:
           name: Install dependencies and run build to generate dist folder to copy into remote server 
           command: | 
-            pip install awscli && apk add --update ansible nodejs npm 
+            pip install awscli && apk add --update ansible nodejs npm rsync
             cd backend 
             npm i  
             npm run build
