--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -254,6 +254,7 @@ jobs:
             npm run build
             cp -rv dist/*  ../.circleci/ansible/roles/configure-server/files/dist
 
+      - run: ls .circleci/ansible/roles/configure-server/files/dist
       - run: 
           name: Configure server using ansible playbook
           command: ansible-playbook -i inventory .circleci/ansible/configure_backend.yml
