--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -248,13 +248,14 @@ jobs:
       - run:
           name: Install dependencies and run build to generate dist folder to copy into remote server 
           command: | 
-            pip install awscli && apk add --update ansible nodejs npm rsync
+            pip install awscli && apk add --update ansible nodejs npm 
             cd backend 
             npm i  
             npm run build
             cp -rv dist/*  ../.circleci/ansible/roles/configure-server/files/dist
 
       - run: ls .circleci/ansible/roles/configure-server/files/dist
+      - run: apk update && apk add --upgrade rsync
       - run: 
           name: Configure server using ansible playbook
           command: ansible-playbook -i inventory .circleci/ansible/configure_backend.yml
