--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,13 +255,12 @@ jobs:
             cp -rv dist/*  ../.circleci/ansible/roles/configure-server/files/dist
 
       - run: ls .circleci/ansible/roles/configure-server/files/dist
-      - run: apk update && apk add --upgrade rsync openssh && which rsync
+      - run: apk update && apk add --upgrade rsync openssh 
       - run: 
           name: Configure server using ansible playbook
           command: ansible-playbook -i inventory .circleci/ansible/configure_backend.yml
           environment:
             ANSIBLE_HOST_KEY_CHECKING: False
-      - slack-notify
       - destroy_environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
@@ -284,7 +283,7 @@ jobs:
           npm run migrations
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - slack-notify
+    
 
 # =======================================================================================================
 # DEPLOY
