--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,6 +276,20 @@ jobs:
           name: Install dependencies
           command: |
             pip install awscli && apk add --update nodejs npm
+      - run:
+          name: Create env file
+          command: |
+            cd backend
+            echo "ENVIRONMENT=production" > .env
+            echo "NODE_ENV=production" >> .env
+            echo "TYPEORM_CONNECTION=$TYPEORM_CONNECTION" >> .env
+            echo "TYPEORM_ENTITIES=$TYPEORM_ENTITIES" >> .env
+            echo "TYPEORM_HOST=$TYPEORM_HOST" >> .env
+            echo "TYPEORM_PORT=$TYPEORM_PORT" >> .env
+            echo "TYPEORM_USERNAME=$TYPEORM_USERNAME" >> .env
+            echo "TYPEORM_PASSWORD=$TYPEORM_PASSWORD" >> .env
+            echo "TYPEORM_DATABASE=$TYPEORM_DATABASE" >> .env
+      
       - run: |
           cd backend
           npm i 
@@ -400,41 +414,40 @@ jobs:
 workflows:
   default:
     jobs:
-      - check-env
-
-      # - backend_build
-      # - frontend_build
+    
+      - backend_build
+      - frontend_build
       
-      # - backend_tests:
-      #     requires: 
-      #       - backend_build
-      # - frontend_tests:
-      #     requires: 
-      #       - frontend_build
+      - backend_tests:
+          requires: 
+            - backend_build
+      - frontend_tests:
+          requires: 
+            - frontend_build
 
-      # - audit-backend:
-      #     requires:
-      #       - backend_tests
-      # - audit-frontend:
-      #     requires:
-      #       - frontend_tests
+      - audit-backend:
+          requires:
+            - backend_tests
+      - audit-frontend:
+          requires:
+            - frontend_tests
 
-      # - deploy-infrastructure:
-      #     requires:
-      #       - audit-backend
-      #       - audit-frontend
+      - deploy-infrastructure:
+          requires:
+            - audit-backend
+            - audit-frontend
 
-      # - configure-infrastructure:
-      #     requires:
-      #       - deploy-infrastructure
+      - configure-infrastructure:
+          requires:
+            - deploy-infrastructure
 
-      # - run-migrations:
-      #    requires:
-      #     - configure-infrastructure
+      - run-migrations:
+         requires:
+          - configure-infrastructure
       
-      # - smoke-test:
-      #     requires: 
-      #       - run-migrations
+      - smoke-test:
+          requires: 
+            - run-migrations
 
 
       
