--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -372,14 +372,15 @@ jobs:
               --stack-name "backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --query "Stacks[0].Outputs[?OutputKey==\`DNSName\`].OutputValue" \
               --output text)
+              echo ${BACKEND_IP}
               if curl -s "http://${BACKEND_IP}:3030/api/status" | grep "ok"
               then
               return 0
               else
               return 1
               fi
-        - revert-migrations:
-            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+        # - revert-migrations:
+        #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
         
         
   
