--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -15,10 +15,10 @@
 
 - name: "install dependencies."
   become: yes
-  apt:
-    name: ["nodejs", "npm"]
-    state: latest
-    update_cache: yes
+  shell: |
+    curl -sL https://deb.nodesource.com/setup_13.x | sudo bash -
+    apt-get install -y nodejs
+
     
 - name: "install pm2"
   become: yes
@@ -28,10 +28,6 @@
     production: yes
     state: present
 
-- name: Creates directory
-  file:
-    path: ~/app
-    state: directory
 
 - name: install rsync
   become: yes
@@ -42,17 +38,17 @@
   become: yes
   synchronize:
     src: backend
-    dest: ~/app
-  register: copy_output
-    
-- debug: var=copy_output
-
+    dest: ~/
+  
 - name: build backend application
   become: yes
   shell: |
-    cd app/backend/
+    cd backend/
     npm i 
     npm run build
+  register: copy_output
+    
+- debug: var=copy_output
 
 
 
