--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -301,7 +301,7 @@ jobs:
       - run:
           name: Install dependencies
           command: | 
-            apk add --update ansible 
+            pip install awscli && apk add --update ansible nodejs npm 
       - run: 
           name: deploy server using ansible playbook
           command: ansible-playbook -i inventory .circleci/ansible/deploy_backend.yml
