--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -308,8 +308,8 @@ jobs:
           environment:
             ANSIBLE_HOST_KEY_CHECKING: False 
 
-      - revert-migrations:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      # - revert-migrations:
+      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       
      
 
