--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,4 +1,5 @@
 - name: start server
   become: yes
   shell: |
-    pm2 start ~/backend/dist/main.js 
+    # pm2 start /home/ubuntu/backend/dist/main.js 
+    cd backend && npm run start
