--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -20,13 +20,13 @@
     apt-get install -y nodejs
 
     
-- name: "install pm2"
-  become: yes
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
+# - name: "install pm2"
+#   become: yes
+#   npm:
+#     name: pm2
+#     global: yes
+#     production: yes
+#     state: present
 
 
 - name: install rsync
@@ -39,6 +39,21 @@
   synchronize:
     src: backend
     dest: ~/
+
+- name: make env file
+  become: yes
+  shell: |
+    cd backend
+    echo "ENVIRONMENT=production" > .env
+    echo "NODE_ENV=production" >> .env
+    echo "TYPEORM_CONNECTION=$TYPEORM_CONNECTION" >> .env
+    echo "TYPEORM_ENTITIES=$TYPEORM_ENTITIES" >> .env
+    echo "TYPEORM_HOST=$TYPEORM_HOST" >> .env
+    echo "TYPEORM_PORT=$TYPEORM_PORT" >> .env
+    echo "TYPEORM_USERNAME=$TYPEORM_USERNAME" >> .env
+    echo "TYPEORM_PASSWORD=$TYPEORM_PASSWORD" >> .env
+    echo "TYPEORM_DATABASE=$TYPEORM_DATABASE" >> .env
+    
   
 - name: build backend application
   become: yes
