--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -43,17 +43,11 @@
 - name: make env file
   become: yes
   shell: |
-    cd backend
-    echo "ENVIRONMENT=production" > .env
-    echo "NODE_ENV=production" >> .env
-    echo "TYPEORM_CONNECTION=$TYPEORM_CONNECTION" >> .env
-    echo "TYPEORM_ENTITIES=$TYPEORM_ENTITIES" >> .env
-    echo "TYPEORM_HOST=$TYPEORM_HOST" >> .env
-    echo "TYPEORM_PORT=$TYPEORM_PORT" >> .env
-    echo "TYPEORM_USERNAME=$TYPEORM_USERNAME" >> .env
-    echo "TYPEORM_PASSWORD=$TYPEORM_PASSWORD" >> .env
-    echo "TYPEORM_DATABASE=$TYPEORM_DATABASE" >> .env
-    
+    cd backend 
+    cat .env
+  register: env_output
+  
+- debug: var=env_output
   
 - name: build backend application
   become: yes
