--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -43,7 +43,9 @@
 - name: make env file
   become: yes
   shell: |
-    cd backend 
+    cd backend
+    cp env .env 
+    rm env  
     cat .env
   register: env_output
   
