--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -398,7 +398,7 @@ jobs:
             command: |
               BACKEND_IP=$(aws cloudformation describe-stacks \
               --stack-name "backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --query "Stacks[0].Outputs[?OutputKey==\`DNSName\`].OutputValue" \
+              --query "Stacks[0].Outputs[?OutputKey==\`BackendURL\`].OutputValue" \
               --output text)
               echo ${BACKEND_IP}
               if curl -s "http://${BACKEND_IP}:3030/api/status" | grep "ok"
