--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ commands:
           name: Destroy back end
           command: |
             aws cloudformation delete-stack --stack-name "backend-<< parameters.workflow_id >>"
+            aws cloudformation delete-stack --stack-name "prometheus-overwatch"
     
 
   revert-migrations:
@@ -403,8 +404,8 @@ jobs:
               echo ${BACKEND_IP}
               curl "http://${BACKEND_IP}:3030/api/status" 
               
-        - revert-migrations:
-            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+        # - revert-migrations:
+        #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
         
 
 # ================================================================================================================
