--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,7 +224,7 @@ jobs:
             --query "Stacks[0].Outputs[?OutputKey==\`BackendURL\`].OutputValue" \
             --output text >> inventory
    
-   
+
       - run:
           name: create Monitoring infrastructure
           command: |
@@ -421,6 +421,16 @@ jobs:
       - run:
           name: Update cloudfront distribution
           command: |
+            export OLD_ID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
+            echo $OLD_ID
+            if test -z "$OLD_ID"
+            then
+              echo "congrats!!! first deploy , or we lost the prev deploy ID!!!"
+            else
+              aws cloudformation delete-stack --stack-name backend-${OLD_ID}
+              aws s3 rm s3://udapeople-frontend-${OLD_ID} --recursive
+              aws cloudformation delete-stack --stack-name frontend-${OLD_ID}
+            fi
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
               --stack-name udapeople-distro \
@@ -561,9 +571,7 @@ workflows:
       - promote-to-production:
           requires:
             - smoke-test
-      - cleanup-old-deploy:
-          requires:
-            - promote-to-production
+      
 
       
 
