--- a/.circleci/ansible/roles/setup_prometheus/tasks/main.yml
+++ b/.circleci/ansible/roles/setup_prometheus/tasks/main.yml
@@ -57,3 +57,11 @@
     systemctl daemon-reload
     systemctl enable prometheus
     systemctl start prometheus
+
+- name: install and configure grafana for auto start
+  become: yes
+  shell: |
+    apt-get install -y adduser libfontconfig1
+    wget https://dl.grafana.com/oss/release/grafana_7.1.5_amd64.deb
+    sudo dpkg -i grafana_7.1.5_amd64.deb
+    systemctl daemon-reload && sudo systemctl enable grafana-server && sudo systemctl start grafana-server
