--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,7 +218,7 @@ jobs:
       - run:
           name: get public IP of EC2 instance created
           command: |
-            echo "[all]" > inventory
+            echo "[server]" > inventory
             aws cloudformation describe-stacks \
             --stack-name "backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query "Stacks[0].Outputs[?OutputKey==\`BackendURL\`].OutputValue" \
@@ -340,8 +340,8 @@ jobs:
           environment:
             ANSIBLE_HOST_KEY_CHECKING: False 
 
-      # - revert-migrations:
-      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       
      
 
@@ -405,8 +405,8 @@ jobs:
               echo ${BACKEND_IP}
               curl "http://${BACKEND_IP}:3030/api/status" 
               
-        # - revert-migrations:
-        #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+        - revert-migrations:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
         
 
 # ================================================================================================================
@@ -439,30 +439,6 @@ jobs:
             workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
         
 
-  cleanup-old-deploy:
-    docker:
-      - image: python:3.7-alpine3.11
-    steps:
-      - checkout
-      - run: apk add tar gzip
-      - attach_workspace:
-          at: ./
-      - run: pip install awscli && apk add --update nodejs npm curl
-      - run:
-          name: delete old deployment
-          command: |
-            export OLD_ID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
-            echo $OLD_ID
-            if test -z "$OLD_ID"
-            then
-              echo "congrats!!! first deploy , or we lost the prev deploy ID!!!"
-            else
-              aws cloudformation delete-stack --stack-name backend-${OLD_ID}
-              aws s3 rm s3://udapeople-frontend-${OLD_ID} --recursive
-              aws cloudformation delete-stack --stack-name frontend-${OLD_ID}
-            fi
-      - revert-migrations:
-            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 # ========================================================================================================
 # MONITORING
