--- a/.circleci/files/prometheus_cfn.yml
+++ b/.circleci/files/prometheus_cfn.yml
@@ -38,6 +38,10 @@ Resources:
           FromPort: 9093
           ToPort: 9093
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 3000
+          ToPort: 3000
+          CidrIp: 0.0.0.0/0
 
 Outputs:
   prometheusDNSName:
