--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -366,7 +366,7 @@ jobs:
             export API_URL=$(aws cloudformation describe-stacks \
             --stack-name "backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query "Stacks[0].Outputs[?OutputKey==\`BackendURL\`].OutputValue" \
-            --output text)
+            --output text):3030
             echo $API_URL
             cd frontend
             npm i
